--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "homepage": "http://next-auth-example.now.sh",
   "main": "",
   "scripts": {
-    "dev": "node server.js",
+    "dev": "NODE_OPTIONS='--inspect' node server.js",
     "build": "next build",
     "start": "next start"
   },
@@ -24,7 +24,6 @@
     "next": "^11.0.0",
     "next-auth": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "sqlite3": "^5.0.2"
+    "react-dom": "^17.0.2"
   }
 }
